dnl -*- tab-width: 2; indent-tabs-mode: nil -*-

### init & version stuff



dnl AC_INIT(rcd, $VERSION, http://bugzilla.ximian.com/enter_bug.gci?product=rcd)
dnl AC_CONFIG_SRCDIR(src/rcd.c)
dnl AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_INIT(src/rcd.c)

MAJOR_VERSION=0
MINOR_VERSION=0
MICRO_VERSION=1
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

AM_INIT_AUTOMAKE(rcd, $VERSION)

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(MICRO_VERSION)

AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION)
AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION)
AC_DEFINE_UNQUOTED(MICRO_VERSION, $MICRO_VERSION)

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

### args

AC_ARG_WITH(xmlrpc-prefix,
  [--with-xmlrpc-prefix=PREFIX],
  with_xmlrpc_prefix="$withval")

### basic checks

AC_PROG_CC
AC_ISC_POSIX
AC_STDC_HEADERS
AM_PROG_CC_STDC
AC_HEADER_STDC

AM_PROG_LIBTOOL
AC_PROG_INTLTOOL

### get cflags and libs

PKG_CHECK_MODULES(RCD, glib-2.0 gthread-2.0 gmodule-2.0 libredcarpet-2.0 soup >= 0.7.5)

# I'm sure there is a cleaner way to do this
if test -z "$with_xmlrpc_prefix"; then
  xmlrpc_config="xmlrpc-c-config"
  AC_PATH_PROG(XMLRPC_CONFIG, xmlrpc-c-config, no)
else
  xmlrpc_config="env PATH=$with_xmlrpc_prefix/bin xmlrpc-c-config"
  AC_PATH_PROG(XMLRPC_CONFIG, xmlrpc-c-config, no, $with_xmlrpc_prefix/bin)
fi

if test x$XMLRPC_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find xmlrpc-c-config -- please install the xmlrpc-c library)
fi


XMLRPC_CFLAGS=`$xmlrpc_config --cflags`
XMLRPC_LIBS=`$xmlrpc_config --libs`

RCD_CFLAGS="$RCD_CFLAGS $XMLRPC_CFLAGS"
RCD_LIBS="$RCD_LIBS $XMLRPC_LIBS"

AC_SUBST(RCD_CFLAGS)
AC_SUBST(RCD_LIBS)

### gettext

ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

GETTEXT_PACKAGE=rcd
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")


### build makefiles

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

echo "

Configuration:

  Source code location: ${srcdir}
  Compiler:             ${CC}

  Build CFLAGS:         ${RCD_CFLAGS}

  Build LIBS:           ${RCD_LIBS}
"
